--- a/charts/crypto-tracker/templates/kafka-cluster.yaml
+++ b/charts/crypto-tracker/templates/kafka-cluster.yaml
@@ -2,32 +2,41 @@ apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
   name: kafka-cluster
+  namespace: {{ .Release.Namespace }}
 spec:
   kafka:
-    version: 3.8.0
-    replicas: 1
+    replicas: {{ .Values.kafka.replicas }}
     listeners:
       - name: plain
         port: 9092
         type: internal
         tls: false
-      - name: tls
-        port: 9093
-        type: internal
-        tls: true
+    storage:
+      type: ephemeral
     config:
+      log.message.format.version: "2.7"
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
       transaction.state.log.min.isr: 1
-      default.replication.factor: 1
-      min.insync.replicas: 1
-      inter.broker.protocol.version: "3.8"
-    storage:
-      type: ephemeral
+      auto.create.topics.enable: {{ .Values.kafka.config.broker.config.auto.create.topics.enable }}
   zookeeper:
-    replicas: 3
+    replicas: {{ .Values.kafka.config.zookeeper.replicas }}
     storage:
       type: ephemeral
   entityOperator:
     topicOperator: {}
     userOperator: {}
+
+---
+apiVersion: kafka.strimzi.io/v1beta2
+kind: KafkaTopic
+metadata:
+  name: crypto-tracker-data
+  labels:
+    strimzi.io/cluster: kafka-cluster
+spec:
+  partitions: 3
+  replicas: 1
+  config:
+    retention.ms: 86400000    # 1 day retention
+    segment.bytes: 1073741824 # 1 GB per segment
