--- a/charts/crypto-tracker/values.yaml
+++ b/charts/crypto-tracker/values.yaml
@@ -1,30 +1,101 @@
-kafka:
-  replicaCount: 1
-  externalAccess:
-    enabled: true
-  auth:
-    enabled: false
+# Default values for the crypto-tracker Helm chart
 
+# Global configurations
+global:
+  imagePullPolicy: IfNotPresent
+
+# Kafka configuration
+kafka:
+  replicas: 1
+  config:
+    broker:
+      config:
+        auto.create.topics.enable: "true"
+    zookeeper:
+      replicas: 1
+
+# Spark configuration
 spark:
-  master:
-    webPort: 8080
   worker:
     replicas: 1
-    webPort: 8081
+  job:
+    image:
+      repository: crypto-tracker-spark-job
+      tag: latest
+    mainApplicationFile: local:///opt/spark-job/spark_job.py
 
+# InfluxDB configuration
 influxdb:
-  authEnabled: true
-  adminUser:
-    user: "admin"
-    password: "admin"
-  database: "crypto-tracker"
   persistence:
     enabled: true
-    size: "5Gi"
+    size: 1Gi
+  config:
+    http:
+      auth-enabled: false
+  database: crypto_data
+
+# Data collector app configuration
+dataCollector:
+  image:
+    repository: crypto-tracker-data-collector
+    tag: latest
+  replicaCount: 1
   resources:
     requests:
-      memory: "1Gi"
+      memory: "256Mi"
       cpu: "500m"
+    limits:
+      memory: "512Mi"
+      cpu: "1"
+  kafka:
+    broker: kafka-cluster-kafka-bootstrap.kafka:9092
+    topic: crypto-data
 
+# Spark job configuration
 sparkJob:
-  image: "spark-job-crypto-tracker:latest"
+  image:
+    repository: crypto-tracker-spark-job
+    tag: latest
+  replicaCount: 1
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "500m"
+    limits:
+      memory: "512Mi"
+      cpu: "1"
+  kafka:
+    broker: kafka-cluster-kafka-bootstrap.kafka:9092
+    topic: crypto-data
+  influxdb:
+    host: influxdb
+    port: 8086
+    database: crypto_data
+
+# Dashboard app configuration
+dashboard:
+  image:
+    repository: crypto-tracker-dashboard
+    tag: latest
+  replicaCount: 1
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "500m"
+    limits:
+      memory: "512Mi"
+      cpu: "1"
+  influxdb:
+    host: influxdb
+    port: 8086
+    database: crypto_data
+  service:
+    type: ClusterIP
+    port: 5000
+  ingress:
+    enabled: true
+    host: crypto-tracker.local
+
+# Network policy configurations (optional)
+networkPolicy:
+  enabled: false
