--- a/charts/crypto-tracker/templates/spark-app-deployment.yaml
+++ b/charts/crypto-tracker/templates/spark-app-deployment.yaml
@@ -31,6 +31,14 @@ spec:
         value: {{ index .Values "spark-operator" "config" "kafka" "broker" }}
       - name: KAFKA_TOPIC
         value: {{ index .Values "spark-operator" "config" "kafka" "topic" }}
+      - name: INFLUXDB_HOST
+        value: {{ index .Values "spark-operator" "config" "influxdb" "host" }}
+      - name: INFLUXDB_ORG
+        value: {{ index .Values "spark-operator" "config" "influxdb" "organization" }}
+      - name: INFLUXDB_BUCKET
+        value: {{ index .Values "spark-operator" "config" "influxdb" "bucket" }}
+      - name: INFLUXDB_TOKEN
+        value: {{ index .Values "spark-operator" "config" "influxdb" "token" }}
   executor:
     instances: {{ index .Values "spark-operator" "config" "executor" "instances" }}
     cores: {{ index .Values "spark-operator" "config" "executor" "cores" }}
@@ -40,3 +48,11 @@ spec:
         value: {{ index .Values "spark-operator" "config" "kafka" "broker" }}
       - name: KAFKA_TOPIC
         value: {{ index .Values "spark-operator" "config" "kafka" "topic" }}
+      - name: INFLUXDB_HOST
+        value: {{ index .Values "spark-operator" "config" "influxdb" "host" }}
+      - name: INFLUXDB_ORG
+        value: {{ index .Values "spark-operator" "config" "influxdb" "organization" }}
+      - name: INFLUXDB_BUCKET
+        value: {{ index .Values "spark-operator" "config" "influxdb" "bucket" }}
+      - name: INFLUXDB_TOKEN
+        value: {{ index .Values "spark-operator" "config" "influxdb" "token" }}
