--- a/charts/crypto-tracker/templates/kafka-topic.yaml
+++ b/charts/crypto-tracker/templates/kafka-topic.yaml
@@ -2,6 +2,7 @@ apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaTopic
 metadata:
   name: {{ index .Values "strimzi-kafka-operator" "topic" "name" }}
+  namespace: crypto-tracker
   labels:
     strimzi.io/cluster: {{ index .Values "strimzi-kafka-operator" "name" }}
 spec:
