client now with kafka, docke updated, secret yaml added

--- a/src/data-collector/Dockerfile
+++ b/src/data-collector/Dockerfile
@@ -8,8 +8,22 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the Python script into the container
+# Kaggle API Key kopieren
+COPY kaggle.json /root/.kaggle/kaggle.json
+RUN chmod 600 /root/.kaggle/kaggle.json
+
+# Download und Entpacken der CSV-Daten
+RUN kaggle datasets download -d mczielinski/bitcoin-historical-data -p /app && \
+    unzip /app/bitcoin-historical-data.zip -d /app && \
+    rm /app/bitcoin-historical-data.zip
+
+# Python-Skripte kopieren
 COPY data_collector.py .
+COPY yfinance_loader.py .
+COPY entrypoint.sh .
+
+# Entrypoint-Skript ausführbar machen
+RUN chmod +x entrypoint.sh
 
 # Set the entry point for the container
-ENTRYPOINT ["python", "data_collector.py"]
+ENTRYPOINT ["./entrypoint.sh"]
